@@ -543,6 +543,8 @@ main_loop (void)
 
   octave_initialized = true;
 
+  unwind_protect::begin_frame ("main_loop");
+
   // The big loop.
 
   int retval = 0;
@@ -556,18 +558,26 @@ main_loop (void)
 
 	  reset_parser ();
 
+	  // Save current value of global_command.
+	  unwind_protect_ptr (global_command);
+
 	  // This is the same as yyparse in parse.y.
 	  retval = octave_parse ();
 
+	  tree_statement_list *command = global_command;
+
+	  // Restore previous value of global_command.
+	  unwind_protect::run ();
+
 	  if (retval == 0)
 	    {
-	      if (global_command)
+	      if (command)
 		{
-		  global_command->eval ();
+		  command->eval ();
 
-		  delete global_command;
+		  delete command;
 
-		  global_command = 0;
+		  command = 0;
 
 		  OCTAVE_QUIT;
 
@@ -621,6 +631,8 @@ main_loop (void)
 	}
     }
   while (retval == 0);
+
+  unwind_protect::run_frame ("main_loop");
 
   return retval;
 }
